fixed a box where if the native name was to large it would push other boxes out of place

--- a/src/components/CountryDetails.css
+++ b/src/components/CountryDetails.css
@@ -92,6 +92,7 @@
   display: flex;
   justify-content: left;
   align-items: start;
+  overflow: hidden;
 }
 .native-name-title p {
   width: 100%;
@@ -206,6 +207,7 @@ text {
     display: flex;
     justify-content: left;
     align-items: start;
+
   }
   .native-name-title p {
     width: 100%;
